implementa plano de paginacao (tarefas 1-9)
PageResponse, listagens paginadas (produtos, categorias, usuarios,
low-stock, lotes expirados), inventory-logs e lotes por produto.